--- a/jenkinsfile
+++ b/jenkinsfile
@@ -37,7 +37,7 @@ pipeline {
 
       stage('Stop PAT ASC DB Instance') {
             steps {
-                withAWS(roleAccount:'471297434123', role:'arn:aws:iam::471297434123:role/xyz-role') {
+                withAWS(roleAccount:'account.id', role:'arn:aws:iam::471297434123:role/xyz-role') {
                 sh """
                 aws ec2 stop-instances --region eu-west-1 --instance-ids 'i-1234'
                 """
